# automationexercise-ui-selenium-python

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
src/components/: add_to_cart_modal_component.py  category_sidebar_component.py  footer_component.py  header_component.py  home_products_component.py  scroll_up_component.py
src/configs/: config.yaml  staging.yaml
src/pages/: account_created_page.py  account_deleted_page.py  base_page.py  cart_page.py  checkout_page.py  guest_page.py  (+10 more)
test/: conftest.py
test_data/: user_data.yaml
tests/: conftest.py  test_add_products_in_cart.py  test_add_review_on_product.py  test_add_to_cart_from_recommended_items.py  test_contact_us_form.py  test_download_invoice_after_purchase_order.py  test_login_user_with_correct_email_and_password.py  test_login_user_with_incorrect_email_and_password.py  test_logout_user.py  test_place_order_login_before_checkout.py  test_place_order_register_before_checkout.py  test_place_order_register_while_checkout.py  test_register_user.py  test_register_user_with_existing_email.py  test_remove_products_from_cart.py  test_search_product.py  test_search_products_and_verify_cart_after_login.py  test_verify_address_details_in_checkout_page.py  test_verify_all_products_and_product_detail_page.py  test_verify_product_quantity_in_cart.py  test_verify_scroll_up_using_arrow_button_and_scroll_down_functionality.py  test_verify_scroll_up_without_arrow_button_and_scroll_down_functionality.py  test_verify_subcription_in_cart_page.py  test_verify_subscription_in_home_page.py  test_verify_test_cases_page.py  test_view_and_cart_brand_products.py  test_view_category_products.py
(+10 files in other folders)
